--- a/week02/hw02.ipynb
+++ b/week02/hw02.ipynb
@@ -3,7 +3,20 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Homework 02\n",
+    "# California Housing Prices\n",
+    "### Homework 02\n",
+    "## TOC\n",
+    "1. [Introduction](#intro)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## <a class=\"anchor\" id=\"intro\">Introduction</a>\n",
     "https://github.com/alexeygrigorev/mlbookcamp-code/blob/master/course-zoomcamp/cohorts/2022/02-regression/homework.md"
    ],
    "metadata": {
