try toc attempt 2a

--- a/week01/hw01.ipynb
+++ b/week01/hw01.ipynb
@@ -3,25 +3,13 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# California Housing Prices\n",
-    "### Homework 01\n",
-    "## TOC\n",
-    "1. [Introduction](#intro)"
+    "# Homework 01\n",
+    "https://github.com/alexeygrigorev/mlbookcamp-code/blob/master/course-zoomcamp/cohorts/2022/01-intro/homework.md"
    ],
    "metadata": {
     "collapsed": false
    },
    "outputs": []
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "## Introduction <a class=\"anchor\" id=\"intro\"></a>\n",
-    "https://github.com/alexeygrigorev/mlbookcamp-code/blob/master/course-zoomcamp/cohorts/2022/01-intro/homework.md"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
   },
   {
    "cell_type": "code",
